Ensure all ASCII files can be previewed and add unit tests
Signed-off-by: Jason Winning <jason.winning@gmail.com>